--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 LLM-Agents
 docs_vector_embedding
 Important_notes.md
+KnowledgeGraph-Q&A-and-RAG-with-TabularData
 KnowledgeGraph-Q&A-and-RAG-with-Text
 =======
 LangGraph
