--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ LLM-Agents
 docs_vector_embedding
 Important_notes.md
 KnowledgeGraph-Q&A-and-RAG-with-Text
+desktop.ini
 =======
 LangGraph
 storage
