--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 LLM-Agents
 docs_vector_embedding
+RAG-with-unstructured-data-and-SQLAgent
 Important_notes.md
 KnowledgeGraph-Q&A-and-RAG-with-Text
 desktop.ini
