update docker chrome, add requirements.txt, add docker to project

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ swiss_faq.md
 Chinook_Sqlite.sql
 travel2.backup.sqlite
 travel2.sqlite
+*.pem
 =======
 # Byte-compiled / optimized / DLL files
 __pycache__/
