--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ swiss_faq.md
 Chinook_Sqlite.sql
 travel2.backup.sqlite
 travel2.sqlite
+chroma_db
 *.pem
 =======
 # Byte-compiled / optimized / DLL files
